# Podcast-Agent

./: .env.example  .gitignore  README.md  README.zh-CN.md  index.html  pyproject.toml
dev-docs/: INDEX.md  README.md
examples/: full-report-cases.json  full-report-cases.jsonl  manifest.jsonl  manifest_bilibili.jsonl
scripts/: run-full-batch.sh
scripts/api/: ask_followup.sh  ask_question.sh  (+2 more)
tests/: fakes.py  test_api_adapters.py  test_api_followup.py  test_api_progress.py  test_api_runner.py  test_api_server.py  test_api_store.py  test_artifacts.py  test_cli.py  test_downloaders_yt_dlp.py  test_elements_metadata.py  test_evidence_extraction.py  test_markdown_report.py  test_outline_generation.py  test_pipeline_context.py  test_pipeline_metadata.py  test_pipeline_source.py  test_report_intent.py  test_sources_bilibili.py  test_sources_detection.py  test_sources_registry.py  test_sources_youtube.py  test_summary_generation.py  test_transcribers_aliyun.py  test_transcribers_audio_prepare.py  test_transcript_format.py  test_transcript_tracks.py  test_viewpoint_generation.py  test_xhs_cli.py  test_xhs_composer.py  test_xhs_parser.py  test_xhs_render_debug.py  test_xhs_render_html.py  test_xhs_render_layout.py  test_xhs_render_pagination.py  test_xhs_render_screenshot.py  test_xhs_render_styles.py  test_xhs_renderer.py  test_youtube_metadata_fetch.py  test_youtube_transcript_fetch.py  (+1 more)
usage-docs/: api.md  bilibili-videochat-alignment-decision.md  bilibili-videochat-alignment-execution-plan.md  cli.md  evidence-videochat-alignment.md  full-pipeline-cli.md
(+82 files in other folders)
