[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podcast-agent"
version = "0.1.0"
description = "A CLI pipeline for understanding podcast and long-form video content."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0,<8.2",
    "python-dotenv>=1.0.1",
    "dashscope>=1.20.0",
    "oss2>=2.18.0",
    "requests>=2.32.0",
    "typer>=0.12.5,<0.13",
    "yt-dlp>=2025.1.0",
    "markdown-it-py>=3.0.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]
pdf = [
    "playwright>=1.45.0",
]
xhs = [
    "markdown>=3.7",
    "playwright>=1.45.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
podcast-agent = "podcast_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/podcast_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
